--- a/main.html
+++ b/main.html
@@ -8,9 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<nav>
+		<ul>
+			<li><a href="https://example.com/page1">Link 1</a></li>
+			<li><a href="https://example.com/page2">Link 2</a></li>
+			<li><a href="https://example.com/page3">Link 3</a></li>
+		</ul>
+	</nav>
 
+	<section>
+		<h2>3 random audios</h2>
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+			Your browser does not support the audio element.
+		</audio>
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+			Your browser does not support the audio element.
+		</audio>
+		<audio controls>
+			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+			Your browser does not support the audio element.
+		</audio>
+	</section>
+
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
